--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "graphql": "^16.3.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.26.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
