--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
     "next": "12.0.10",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.1"
